2018-03-11         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updates modified month.

2018-02-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.2.1: Release tar ball made.

2018-02-17         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: More updates.

2017-02-17         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawk.1: Synchronized with English version.

2018-02-10         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: More updates.

2018-01-26         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: More updates.

2018-01-18         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: More updates.

2017-12-07         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Synchronize with English original.

2018-01-12         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Remove incorrect '*' on some declarations of
	ext_id in sample extension code. Thanks to Panos Papadopoulos
	<panos1962@gmail.com> for the report.
	* texinfo.tex: Updated from GNULIB.

2017-12-07         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawk.1: New file. (Italian translation of the man page.)

2017-12-05         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Italian translation updated.

2017-10-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.2.0: Release tar ball made.

2017-10-17         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (EDITION): Update to 4.2. Also, remove all visible
	references to http://awk.info; that site no longer exists.  

2017-10-17         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Italian translation updated.

2017-10-12         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Italian translation updated.

2017-10-08         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Italian translation updated.
