@@ -1,3 +1,7 @@
+2018-03-30         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawktexi.in: Updates.
+
 2018-03-11         Antonio Giovanni Colombo   <azc100@gmail.com>
 
 	* gawktexi.in: Updates modified month.
